# Arm_Motion_Planning_and_Differential_Drive_Robot

./: README.md
arm_move/: CMakeLists.txt  LICENSE  README.md  package.xml
arm_move/config/: waypoints.yaml
arm_move/launch/: arm.launch  arm_box.launch
arm_move/nodes/: mover
arm_move/srv/: Follow.srv  Reset.srv  Step.srv
arm_move/test/: arm.test  mover_test
arm_move/worlds/: arm_box  arm_box.world
diff_drive/: CMakeLists.txt  README.md  package.xml
diff_drive/config/: ddrive.rviz  ddrive.yaml
diff_drive/launch/: ddrive.launch  ddrive_rviz.launch
diff_drive/nodes/: flip
diff_drive/rviz/: ddrive.rviz  ddrive_odom.rviz
diff_drive/urdf/: ddrive.gazebo.urdf  ddrive.gazebo.xacro  ddrive.urdf.xacro
diff_drive/worlds/: ddrive.world
