<?xml version="1.0"?>
<package format="2">
  <name>arm_move</name>
  <version>0.0.1</version>
  <description>Makes an Interbotix px100 arm follow waypoins</description>

  <maintainer email="andruliu2022@u.northwestern.edu">Andru</maintainer>

  <license>MIT</license>

  <author email="andruliu2022@u.northwestern.edu">Andru</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>moveit_commander</depend>
  <test_depend>rostest</test_depend>
  <build_export_depend>rospy</build_export_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
